# udown

./: .config  .default  .gitignore  README.md  download.py  downloader.py  downloads.db  downloads.txt  logger.py  main.py  pyproject.toml  requirements.txt  sqlite_conn.py
downloaders/: auto.py  bs4.py  lxml.py  selector.py  selenium_downloader.md  selenium_downloader.py  torrent.py  torrent_search.py  transmission.py  url_lib.py  wget.py  xpath.py  ytdlp.py  ytdlp_channel.py  ytdlp_extract.py
downloaders/metadata/: audio_mp3_best.json  chrome.json  edge.json  firefox.json  selenium.json  torrent_default.json  undetected.json  video_avc1.json  video_mp4_best.json  video_mp4_subs.json
extractors/: bs4_extractor.py
metadata/: audio_mp3_best.json
src/: .config  .default  app.css  download.py  downloader.py  extractor.py  options.py  settings.py  tui_common.py  tui_downloaders.py  tui_downloads.py  tui_main.py  tui_options.py  tui_progress.py  tui_settings.py  update.py
tests/: downloads.txt  file.json  quotes.json  secure.json  test_base.py  test_bs4.py  test_download.py  test_downloader.py  test_lxml.py  test_selector.py  test_selenium.py  test_torrent.py  test_xpath.py  test_ytdlp.py
utils/: __init__.py  logger.py  sqlite.py  sqlite_conn.py  sqlite_item.py
