[project]
name = "udown"
version = "0.1.0"
description = "Simple universal downloader"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "argcomplete==3.6.3",
    "linkify-it-py==2.0.3",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "platformdirs==4.5.1",
    "Pygments==2.19.2",
    "rich==14.2.0",
    "textual==6.9.0",
    "typing_extensions==4.15.0",
    "uc-micro-py==1.0.3",
    "urllib3==2.6.1",
    "yt-dlp==2025.12.8",
]

[project.scripts]
udown = "__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}